# Data-Engineering-Project-2

./: .env  .gitignore  Jenkinsfile  README.md  docker-compose.yml
back-end/: .gitignore  Dockerfile  Readme.md  app.py  pyproject.toml  requirements.txt
back-end/app/: app.py
back-end/app/tests/: test.py
front-end/: .gitignore  Dockerfile  Readme.md  package.json
front-end/public/: index.html
front-end/src/: App.css  App.js
front-end/src/Components/: formtoxic.js  resulttoxic.js
front-end/src/tests/: App.spec.js  App.test.js
grafana/: hardware-model.json  requests-model.json
ngrok/: ngrok.yml
prometheus/: alermanager.yml  prometheus.yml  rules.yml
