[tool.poetry]
name = "data_engineering_1"
version = "0.1.0"
description = "Toxify application, given a piece of text, it repplies with the sentiment analysis (positive, negative, neutral). Using Flask for implementation and docker for deployement."
authors = ["Chloe CARAYON <chloe.carayon@efrei.net> - Cecile SPATZ <cecile.spatz@efrei.net>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
Flask = "^2.0.2"
Flask-Session = "^0.4.0"
python-dotenv = "^0.19.2"
Flask-Cors = "^3.0.10"
detoxify = "^0.4.0"
prometheus-flask-exporter = "^0.18.7"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
